# crm-api-sdk

./: .gitignore  README.md  pyproject.toml  requirements.txt
crm_api/: __init__.py  exceptions.py  utils.py
crm_api/client/: __init__.py  accounts.py  activation.py  base.py  catalog.py  departments.py  dialogs.py  notes.py  payments.py  profile.py  prompts.py  proxy.py  referrals.py  reply_templates.py  scripts.py  servers.py  staff.py  subscriptions.py  tasks.py  users.py
crm_api/models/: __init__.py  accounts.py  activation.py  catalog.py  departments.py  dialogs.py  inputs.py  notes.py  payments.py  prompts.py  proxy.py  referrals.py  reply_templates.py  scripts.py  servers.py  staff.py  subscriptions.py  tasks.py  users.py
docs/: SDK_PARITY.md
examples/: create_user.py  quickstart.py
tests/: conftest.py  test_accounts.py  test_activation.py  test_catalog.py  test_departments.py  test_dialogs.py  test_extend_ai_limit_run.py  test_new_endpoints_run.py  test_notes.py  test_payments.py  test_payments_api_run.py  test_profile.py  test_prompts.py  test_proxy.py  test_referrals.py  test_reply_templates.py  test_retry.py  test_scripts_tools_run.py  test_servers.py  test_staff.py  test_subscriptions.py  test_tasks.py  test_users.py
