[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "crm-api-sdk"
version = "0.4.0"
description = "Asynchronous Python SDK for a CRM API."
authors = [{ name = "Matrix" }]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "License :: Other/Proprietary License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "tenacity>=9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["crm_api"]
include = [
  "crm_api/py.typed",
]

[tool.hatch.build.targets.sdist]
include = [
  "crm_api",
  "crm_api/py.typed",
]
